# texttosql_localllm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: example_qa_sewage.csv  table_description.txt
pipelines/: openwebui_pipeline_workflow4.py
pipelines/data/: sewage_schema.sql  table_column_description.txt
tests/: __init_.py  test_module.py
texttosql_localllm/: __init__.py  database_descriptor.py  problem_class.py  sewage_data_descriptor.txt  text2sql.py  utils.py
workflows/: __init__.py  workflow_4.py
