[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texttosql_localllm"
version = "0.2.1"
description="Run text to sql workflows and benchmarks using Ollama and Langchain"
readme = "README.md"  # You can also specify a file path here
requires-python = ">=3.12"

# Authors and maintainers can be a list of tables.
authors = [
  { name = "David Visontai", email = "david.visontai@ttk.elte.hu" }
]

# License can be declared as an SPDX identifier or by referencing a file.
license = { file = "LICENSE" }

# Dependencies that will be installed along with your package.
dependencies = [
    'chromadb',
    "langchain>=1.0.0",
    "langchain-chroma>=1.0",
    "langchain-community",
    "langchain-core>=1.0",
    "langchain-experimental",
    "langchain-ollama>=1.0",
    "langchain-openai>=1.0",
    "langchain-text-splitters>=1.0",
    "pandas>=2.3.3",
    'sql_metadata',
    'sqlalchemy',
    'sqlvalidator',
]

# Additional optional fields
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

# URLs for your project (like homepage, repository, documentation)
[project.urls]
"Homepage" = "https://github.com/jegesm/texttosql_localllm"
"Repository" = "https://github.com/jegesm/texttosql_localllm"

